--- a/index.html
+++ b/index.html
@@ -1,1 +1,159 @@
-Hello world
+<!DOCTYPE html>
+<html style="cursor: auto !important;" lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>mir-server.io</title>
+
+        <script>
+        /* HTML5 element support */
+        for(var e,l='article aside footer header nav section time'.split(' ');e=l.pop();document.createElement(e));
+        </script>
+
+        <meta name="description" content="Deployments so easy it's almost magical.">
+
+        <link rel="icon" type="image/png" href="https://assets.ubuntu.com/v1/cb22ba5d-favicon-16x16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="https://assets.ubuntu.com/v1/49a1a858-favicon-32x32.png" sizes="32x32">
+
+        <link rel="apple-touch-icon" sizes="144x144" href="https://assets.ubuntu.com/v1/3361409d-apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="https://assets.ubuntu.com/v1/5fe4d3c8-apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="https://assets.ubuntu.com/v1/09460d9a-apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" href="https://assets.ubuntu.com/v1/cc66da65-apple-touch-icon.png">
+
+        <link rel="stylesheet" href="resources/main.css">
+    </head>
+
+    <body class="">
+        <header id="navigation" class="p-navigation">
+          <div class="row">
+            <div class="p-navigation__logo">
+              <a class="p-navigation__link" href="https://mir-server.io/">
+                <img src="resources/mir-logo.svg" alt="Mir Display Server">
+              </a>
+            </div>
+            <a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
+            <a href="#" class="p-navigation__toggle--close" title="close menu">Menu</a>
+            <nav class="p-navigation__nav">
+              <span class="u-off-screen">
+                <a href="#main-content">Jump to main content</a>
+              </span>
+              <ul class="p-navigation__links">
+                <li class="p-navigation__link"><a href="https://wiki.ubuntu.com/Mir"><span class="p-link--external">User manual</span></a></li>
+                <li class="p-navigation__link"><a href="http://unity.ubuntu.com/mir"><span class="p-link--external">Developer manual</span></a></li>
+              </ul>
+            </nav>
+          </div>
+        </header>
+
+        <main id="main-content" class="inner-wrapper">
+          <div class="page-content">
+    <div class="p-strip--hero">
+  <div class="row u-vertically-center">
+    <div class="col-6">
+    <h1>The fast, open and secure display server for any device.</h1>
+    <p>Mir is a system-level component that can be used to unlock next-generation
+user experiences for devices ranging from traditional Linux desktops to IoT devices
+to embedded products powered by Linux and Android. Mir can be viewed as a replacement
+for the X window server system, commonly used on Linux desktop devices or
+SurfaceFlinger used on Android devices. Mir allows device makers and desktop users
+to have a well-defined, efficient, flexible, and secure platform on which their
+graphical environment sits. </p>
+    </div>
+    <div class="col-6 u-align--center u-hidden--small">
+    </div>
+  </div>
+</div>
+
+<div class="p-strip--border-bottom">
+  <div class="row">
+    <h2>Why Mir</h2>
+    <p>The sophisticated user experience offered by mobile devices like the iPhone or
+Android-powered devices changes the expectations of users regarding a “fast’n’fluid”
+(f’n’f) way of interacting with their devices as well as a need an expectation for
+that experience to remain secure. Historically, graphical user interfaces on the Linux
+platform have been powered by the X windowing system. X has a long and successful
+history and it has served the purposes of both system level and application level UI
+well for more than 3 decades. However, users nowadays expect a more consistent,
+integrated and secure user experience than what is possible to offer on top of the X&nbsp;
+window system.</p>
+<p>If you are building a device or creating a desktop experience for your users, Mir can
+give you a graphics stack that works across different platforms and driver models, that is
+ easy to integrate into shells and secure.</p>
+  </div>
+</div>
+
+<div class="p-strip--light">
+  <div class="row">
+    <h2>Learn more</h2>
+    <div class="col-12 u-equal-height p-divider">
+      <div class="col-4 p-divider__block">
+        <div class="p-heading-icon">
+          <div class="p-heading-icon__header">
+            <img class="p-heading-icon__img" src="resources/3fd62570-docs.svg" alt="">
+            <h3 class="p-heading-icon__title">Documentation</h3>
+          </div>
+          <p>Refer to our documentation for a more detailed guide on how to get started using Mir.</p>
+          <p><a class="p-link--external" href="https://developer.ubuntu.com/core/examples/snaps-on-mir">mir-kiosk example</a></p>
+        </div>
+      </div>
+
+      <div class="col-4 p-divider__block">
+        <div class="p-heading-icon">
+          <div class="p-heading-icon__header">
+            <img class="p-heading-icon__img" src="resources/4f3fc618-github.svg" alt="">
+            <h3 class="p-heading-icon__title">Code</h3>
+          </div>
+          <p>Get Mir or contribute to its development</p>
+          <p><a class="p-link--external" href="https://github.com/MirServer/mir">GitHub</a></p>
+        </div>
+      </div>
+
+      <div class="col-4 p-divider__block">
+        <div class="p-heading-icon">
+          <div class="p-heading-icon__header">
+            <img class="p-heading-icon__img" src="resources/5c0fb313-askubuntu.svg" alt="" width="100">
+            <h3 class="p-heading-icon__title">Community</h3>
+          </div>
+          <p>Get involved!</p>
+          <p><a class="p-link--external" href="https://webchat.freenode.net/?channels=%23ubuntu-mir">#ubuntu-mir on Freenode</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<footer class="p-footer">
+  <div class="row">
+    <div class="p-footer__inner">
+        <ul class="p-inline-list u-no-margin--top">
+          <li class="p-inline-list__item"><a href="https://mir-server.io/">Home</a></li>
+          <li class="p-inline-list__item"><a class="p-link--external" href="https://wiki.ubuntu.com/Mir">User manual</a></li>
+          <li class="p-inline-list__item"><a class="p-link--external" href="http://unity.ubuntu.com/mir">Developer manual</a></li>
+          <li class="p-inline-list__item"><a class="p-link--external" href="https://github.com/MirSever">Contribute</a></li>
+          <li class="p-inline-list__item"><a class="p-link--external" href="https://askubuntu.com/questions/tagged/mir">askubuntu.com</a></li>
+          <li class="p-inline-list__item"><a class="p-link--external" href="https://webchat.freenode.net/?channels=#ubuntu-mir">IRC</a></li>
+        </ul>
+        © Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.
+        <nav>
+            <ul class="p-footer__links">
+                <li class="p-footer__item">
+                    <a class="p-footer__link" href="http://www.ubuntu.com/legal">Legal information</a>
+                </li>
+                <li class="p-footer__item">
+                    <a class="p-footer__link" href="https://github.com/MirServer/MirServer.github.io/issues">Report a bug on this site</a>
+                </li>
+            </ul>
+            <span class="u-off-screen">
+                <a href="#">Go to the top of the page</a>
+            </span>
+        </nav>
+    </div>
+  </div>
+</footer>
+
+        </main>
+    
+
+</body></html>
