--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ to have a well-defined, efficient, flexible, and secure platform on which their
 graphical environment sits. </p>
     </div>
     <div class="col-6 u-align--center u-hidden--small">
+      <a href="resources/webkit-openhab.png" target="_blank"><img src="resources/webkit-openhab.png" alt="Mir screenshot" ></a>
     </div>
   </div>
 </div>
