--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ give you a graphics stack that works across different platforms and driver model
             <img class="p-heading-icon__img" src="resources/4f3fc618-github.svg" alt="">
             <h3 class="p-heading-icon__title">Code</h3>
           </div>
-          <p>Get Mir or contribute to its development</p>
+          <p>Get Mir or contribute to its development.</p>
           <p><a class="p-link--external" href="https://github.com/MirServer/mir">GitHub</a></p>
         </div>
       </div>
