Don't point at outdated wiki

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#main-content">Jump to main content</a>
               </span>
               <ul class="p-navigation__links">
-                <li class="p-navigation__link"><a href="https://wiki.ubuntu.com/Mir"><span class="p-link--external">User manual</span></a></li>
+                <li class="p-navigation__link"><a href="doc/getting_and_using_mir.html"><span class="p-link--external">User manual</span></a></li>
                 <li class="p-navigation__link"><a href="doc"><span class="p-link--external">Developer manual</span></a></li>
               </ul>
             </nav>
@@ -130,7 +130,7 @@ give you a graphics stack that works across different platforms and driver model
     <div class="p-footer__inner">
         <ul class="p-inline-list u-no-margin--top">
           <li class="p-inline-list__item"><a href="https://mir-server.io/">Home</a></li>
-          <li class="p-inline-list__item"><a class="p-link--external" href="https://wiki.ubuntu.com/Mir">User manual</a></li>
+          <li class="p-inline-list__item"><a class="p-link--external" href="doc/getting_and_using_mir.html">User manual</a></li>
           <li class="p-inline-list__item"><a class="p-link--external" href="doc">Developer manual</a></li>
           <li class="p-inline-list__item"><a class="p-link--external" href="https://github.com/MirSever">Contribute</a></li>
           <li class="p-inline-list__item"><a class="p-link--external" href="https://askubuntu.com/questions/tagged/mir">askubuntu.com</a></li>
