--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ give you a graphics stack that works across different platforms and driver model
           <li class="p-inline-list__item"><a href="https://mir-server.io/">Home</a></li>
           <li class="p-inline-list__item"><a class="p-link--external" href="doc/getting_and_using_mir.html">User manual</a></li>
           <li class="p-inline-list__item"><a class="p-link--external" href="doc">Developer manual</a></li>
-          <li class="p-inline-list__item"><a class="p-link--external" href="https://github.com/MirSever">Contribute</a></li>
+          <li class="p-inline-list__item"><a class="p-link--external" href="https://github.com/MirServer">Contribute</a></li>
           <li class="p-inline-list__item"><a class="p-link--external" href="https://askubuntu.com/questions/tagged/mir">askubuntu.com</a></li>
           <li class="p-inline-list__item"><a class="p-link--external" href="https://webchat.freenode.net/?channels=#ubuntu-mir">IRC</a></li>
         </ul>
