Remove branding from front page, change colour of header

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ give you a graphics stack that works across different platforms and driver model
             <h3 class="p-heading-icon__title">Documentation</h3>
           </div>
           <p>Refer to our documentation for a more detailed guide on how to get started using Mir.</p>
-          <p><a class="p-link--external" href="https://developer.ubuntu.com/core/examples/snaps-on-mir">mir-kiosk example</a></p>
+          <p><a class="p-link--external" href="resources/snaps-on-mir.md">mir-kiosk example</a></p>
         </div>
       </div>
 
@@ -118,7 +118,7 @@ give you a graphics stack that works across different platforms and driver model
             <h3 class="p-heading-icon__title">Community</h3>
           </div>
           <p>Get involved!</p>
-          <p><a class="p-link--external" href="https://webchat.freenode.net/?channels=%23ubuntu-mir">#ubuntu-mir on Freenode</a></p>
+          <p><a class="p-link--external" href="https://webchat.freenode.net/?channels=%23mirserver">#mirserver on Freenode</a></p>
         </div>
       </div>
     </div>
@@ -133,15 +133,12 @@ give you a graphics stack that works across different platforms and driver model
           <li class="p-inline-list__item"><a class="p-link--external" href="doc/getting_and_using_mir.html">User manual</a></li>
           <li class="p-inline-list__item"><a class="p-link--external" href="doc">Developer manual</a></li>
           <li class="p-inline-list__item"><a class="p-link--external" href="https://github.com/MirServer">Contribute</a></li>
-          <li class="p-inline-list__item"><a class="p-link--external" href="https://askubuntu.com/questions/tagged/mir">askubuntu.com</a></li>
-          <li class="p-inline-list__item"><a class="p-link--external" href="https://webchat.freenode.net/?channels=#ubuntu-mir">IRC</a></li>
+          <li class="p-inline-list__item"><a class="p-link--external" href="https://community.ubuntu.com/c/mir">Forum</a></li>
+          <li class="p-inline-list__item"><a class="p-link--external" href="https://webchat.freenode.net/?channels=#mirserver">IRC</a></li>
         </ul>
-        © Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.
+
         <nav>
             <ul class="p-footer__links">
-                <li class="p-footer__item">
-                    <a class="p-footer__link" href="http://www.ubuntu.com/legal">Legal information</a>
-                </li>
                 <li class="p-footer__item">
                     <a class="p-footer__link" href="https://github.com/MirServer/MirServer.github.io/issues">Report a bug on this site</a>
                 </li>
@@ -155,6 +152,6 @@ give you a graphics stack that works across different platforms and driver model
 </footer>
 
         </main>
-    
+
 
 </body></html>
