Fix "report issue" link

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ give you a graphics stack that works across different platforms and driver model
         <nav>
             <ul class="p-footer__links">
                 <li class="p-footer__item">
-                    <a class="p-footer__link" href="https://github.com/MirServer/MirServer.github.io/issues">Report a bug on this site</a>
+                    <a class="p-footer__link" href="https://github.com/MirServer/mir-server.io/issues">Report a bug on this site</a>
                 </li>
             </ul>
             <span class="u-off-screen">
