Fix snaps-on-mir link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ give you a graphics stack that works across different platforms and driver model
             <h3 class="p-heading-icon__title">Documentation</h3>
           </div>
           <p>Refer to our documentation for a more detailed guide on how to get started using Mir.</p>
-          <p><a class="p-link--external" href="resources/snaps-on-mir.md">mir-kiosk example</a></p>
+          <p><a class="p-link--external" href="https://github.com/MirServer/mir-server.io/blob/master/doc/snaps-on-mir.md">mir-kiosk example</a></p>
         </div>
       </div>
 
