Revise wording around Android, add call for help

--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
     <h1>The fast, open and secure display server for any device.</h1>
     <p>Mir is a system-level component that can be used to unlock next-generation
 user experiences for devices ranging from traditional Linux desktops to IoT devices
-to embedded products powered by Linux and Android. Mir can be viewed as a replacement
-for the X window server system, commonly used on Linux desktop devices or
-SurfaceFlinger used on Android devices. Mir allows device makers and desktop users
-to have a well-defined, efficient, flexible, and secure platform on which their
-graphical environment sits. </p>
+to embedded products powered by Linux. Mir can be viewed as a replacement for the X
+window server system, commonly used on Linux desktop devices Mir allows device makers
+and desktop users to have a well-defined, efficient, flexible, and secure platform on
+which their graphical environment sits. </p>
     </div>
     <div class="col-6 u-align--center u-hidden--small">
       <a href="resources/webkit-openhab.png" target="_blank"><img src="resources/webkit-openhab.png" alt="Mir screenshot" ></a>
@@ -82,6 +81,10 @@ window system.</p>
 <p>If you are building a device or creating a desktop experience for your users, Mir can
 give you a graphics stack that works across different platforms and driver models, that is
  easy to integrate into shells and secure.</p>
+ <p>
+ Mir is currently available for developers to test as part of your kiosk, digital signage,
+ or purpose built graphical solution. We welcome your feedback.
+ </p>
   </div>
 </div>
 
