--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ give you a graphics stack that works across different platforms and driver model
             <h3 class="p-heading-icon__title">Documentation</h3>
           </div>
           <p>Refer to our documentation for a more detailed guide on how to get started using Mir.</p>
-          <p><a class="p-link--external" href="https://github.com/MirServer/mir-server.io/blob/master/doc/snaps-on-mir.md">mir-kiosk example</a></p>
+          <p><a class="p-link--external" href="https://developer.ubuntu.com/core/examples/snaps-on-mir">mir-kiosk example</a></p>
         </div>
       </div>
 
@@ -121,7 +121,7 @@ give you a graphics stack that works across different platforms and driver model
             <h3 class="p-heading-icon__title">Community</h3>
           </div>
           <p>Get involved!</p>
-          <p><a class="p-link--external" href="https://webchat.freenode.net/?channels=%23mirserver">#mirserver on Freenode</a></p>
+          <p><a class="p-link--external" href="https://webchat.freenode.net/?channels=%23mir-server">#mir-server on Freenode</a></p>
         </div>
       </div>
     </div>
