--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p>Mir is a system-level component that can be used to unlock next-generation
 user experiences for devices ranging from traditional Linux desktops to IoT devices
 to embedded products powered by Linux. Mir can be viewed as a replacement for the X
-window server system, commonly used on Linux desktop devices Mir allows device makers
+window server system, commonly used on Linux desktop devices. Mir allows device makers
 and desktop users to have a well-defined, efficient, flexible, and secure platform on
 which their graphical environment sits. </p>
     </div>
