Add a reference to Wayland to the front page.

--- a/index.html
+++ b/index.html
@@ -72,12 +72,15 @@ which their graphical environment sits. </p>
     <p>The sophisticated user experience offered by mobile devices like the iPhone or
 Android-powered devices changes the expectations of users regarding a “fast’n’fluid”
 (f’n’f) way of interacting with their devices as well as a need an expectation for
-that experience to remain secure. Historically, graphical user interfaces on the Linux
+that experience to remain secure.</p>
+<p>Historically, graphical user interfaces on the Linux
 platform have been powered by the X windowing system. X has a long and successful
 history and it has served the purposes of both system level and application level UI
 well for more than 3 decades. However, users nowadays expect a more consistent,
-integrated and secure user experience than what is possible to offer on top of the X&nbsp;
-window system.</p>
+integrated and secure user experience than what is possible to offer on top of the
+X&nbsp;windowing system. To meet the needs of today's users Mir replaces the X11 protocol
+(used by X) with Wayland. Wayland is the <em>de facto</em> successor to X11 and is designed
+to address the problems that have proved intractable with the X&nbsp;windowing system.</p>
 <p>If you are building a device or creating a desktop experience for your users, Mir can
 give you a graphics stack that works across different platforms and driver models, that is
  easy to integrate into shells and secure.</p>
