Set up Vanilla 1.8.0 and node-sass

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel="apple-touch-icon" sizes="72x72" href="https://assets.ubuntu.com/v1/09460d9a-apple-touch-icon-72x72.png">
         <link rel="apple-touch-icon" href="https://assets.ubuntu.com/v1/cc66da65-apple-touch-icon.png">
 
-        <link rel="stylesheet" href="resources/main.css">
+        <link rel="stylesheet" href="build/styles.css">
     </head>
 
     <body class="">
