Add Get Started section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </section>
     <section class="p-strip--light">
       <div class="row">
-        <h2>Learn more</h2>
+        <h2>Get started</h2>
       </div>
       <div class="row p-divider">
         <div class="col-4 p-divider__block">
