Replace hero image with tablet screen

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             sits.</p>
         </div>
         <div class="col-6 u-align--center u-vertically-center">
-          <img src="https://assets.ubuntu.com/v1/c6504e94-Dell_XPS_Laptop_Front-Desktop.png" alt="Laptop running Ubuntu 18.04" />
+          <img src="https://assets.ubuntu.com/v1/c65d855b-device.png" alt="" />
         </div>
       </div>
     </section>
