--- a/index.html
+++ b/index.html
@@ -77,50 +77,47 @@
       </div>
       <div class="row u-equal-height">
         <article class="p-card--featured col-4">
-          <h4 class="p-muted-heading">Tutorial</h4>
+          <h4 class="p-muted-heading">IOT</h4>
           <hr />
-          <a class="u-align--center" href="https://tutorials.ubuntu.com/tutorial/graphical-snaps#0">
-            <img src="https://via.placeholder.com/350x200?text=Tutorial" alt="" />
-          </a>
           <h3 class="p-heading--four">
             <a href="https://tutorials.ubuntu.com/tutorial/graphical-snaps#0">How to build a digital signage app for embedded displays&nbsp;&rsaquo;</a>
           </h3>
+          <p class="p-card--featured__date">21 May 2018</p>
+          <p>A guide to creating graphical snaps for Ubuntu IoT devices on top of an Xwayland stack. Learn how to build a digital signage app for kiosks, advertising screens and other embedded displays.</p>
           <hr style="margin-top: auto;" />
           <p class="u-no-margin--bottom">
-            <small>mir-kiosk</small>
+            <small>Use case: mir-kiosk</small>
           </p>
         </article>
         <article class="p-card--featured col-4">
-          <h4 class="p-muted-heading">Tutorial</h4>
+          <h4 class="p-muted-heading">IOT</h4>
           <hr />
-          <a class="u-align--center" href="https://tutorials.ubuntu.com/tutorial/graphical-snaps-xwayland#0">
-            <img src="https://via.placeholder.com/350x200?text=Tutorial" alt="" />
-          </a>
           <h3 class="p-heading--four">
             <a href="https://tutorials.ubuntu.com/tutorial/graphical-snaps-xwayland#0">How to create graphical snaps for IoT devices on top of a Xwayland stack&nbsp;&rsaquo;</a>
           </h3>
+          <p class="p-card--featured__date">17 May 2018</p>
+          <p>This is a guide on how to create graphical snaps for Ubuntu with a single GUI application running fullscreen on the display.</p>
           <hr style="margin-top: auto;" />
           <p class="u-no-margin--bottom">
-            <small>Unity8</small>
+            <small>Use case: Unity8</small>
           </p>
         </article>
         <article class="p-card--featured col-4">
-          <h4 class="p-muted-heading">Tutorial</h4>
+          <h4 class="p-muted-heading">Packaging</h4>
           <hr />
-          <a class="u-align--center" href="https://community.ubuntu.com/t/snaps-to-develop-a-web-kiosk-on-ubuntu-core-using-wayland/">
-            <img src="https://via.placeholder.com/350x200?text=Tutorial" alt="" />
-          </a>
           <h3 class="p-heading--four">
             <a href="https://community.ubuntu.com/t/snaps-to-develop-a-web-kiosk-on-ubuntu-core-using-wayland/">Snaps to develop a Web kiosk on Ubuntu Core (using Wayland)&nbsp;&rsaquo;</a>
           </h3>
+          <p class="p-card--featured__date">8 June 2018</p>
+          <p>Display servers solve a large and complex problem. Mir provides a broad and powerful library to solve those problems, but there is a learning curve to use Mir effectively.</p>
           <hr style="margin-top: auto;" />
           <p class="u-no-margin--bottom">
-            <small>Egmde</small>
+            <small>Use case: Egmde</small>
           </p>
         </article>
       </div>
     </section>
-    <section class="p-strip--dark is-bordered">
+    <section class="p-strip--light">
       <div class="row">
         <h2>Why Mir?</h2>
       </div>
@@ -144,47 +141,34 @@
             solution. We welcome your feedback.</p>
         </div>
       </div>
+    </section>
+    <section class="p-strip--light is-bordered u-no-padding--top">
       <div class="row u-align--center">
-        <img src="https://via.placeholder.com/1000x500?text=Architecture graphic" alt="" />
+        <img src="https://assets.ubuntu.com/v1/1c5d16e4-Mir-diagram.svg" alt="" />
       </div>
     </section>
-    <section class="p-strip--light">
+    <section class="p-strip">
       <div class="row">
         <h2>Get started</h2>
       </div>
       <div class="row p-divider">
         <div class="col-4 p-divider__block">
-          <div class="p-heading-icon">
-            <div class="p-heading-icon__header">
-              <a href="https://developer.ubuntu.com/core/examples/snaps-on-mir" class="p-link--soft">
-                <img class="p-heading-icon__img" src="https://assets.ubuntu.com/v1/3fd62570-docs.svg" />
-              </a>
-              <h3 class="p-heading-icon__title"><a href="https://developer.ubuntu.com/core/examples/snaps-on-mir" class="p-link--soft">Documentation</a></h3>
-            </div>
-            <p>Refer to our documentation for a more detailed guide on how to get started using Mir</p>
+          <h3>Documentation</h3>
+          <p>Refer to our documentation for a more detailed guide on how to get started using Mir</p>
+          <a class="p-link--external" href="https://developer.ubuntu.com/core/examples/snaps-on-mir">mir-kiosk example</a>
+        </div>
+        <div class="col-4 p-divider__block">
+          <h3>Code</h3>
+          <p>Get Mir or contribute to its development</p>
+          <div class="p-icon-link">
+            <a href="https://github.com/MirServer/mir"><img class="p-icon-link__icon" src="https://assets.ubuntu.com/v1/b2e68410-github.svg" /></a>
+            <a class="p-link--external" href="https://github.com/MirServer/mir">Mir on GitHub</a>
           </div>
         </div>
         <div class="col-4 p-divider__block">
-          <div class="p-heading-icon">
-            <div class="p-heading-icon__header">
-              <a href="https://github.com/MirServer/mir" class="p-link--soft">
-                <img class="p-heading-icon__img" src="https://assets.ubuntu.com/v1/4f3fc618-github.svg" />
-              </a>
-              <h3 class="p-heading-icon__title"><a href="https://github.com/MirServer/mir" class="p-link--soft">Code</a></h3>
-            </div>
-            <p>Get Mir or contribute to its development</p>
-          </div>
-        </div>
-        <div class="col-4 p-divider__block u-no-padding--bottom">
-          <div class="p-heading-icon">
-            <div class="p-heading-icon__header">
-              <a href="https://webchat.freenode.net/?channels=%23mir-server" class="p-link--soft">
-                <img class="p-heading-icon__img" src="https://assets.ubuntu.com/v1/5c0fb313-ask+ubuntu.svg" />
-              </a>
-              <h3 class="p-heading-icon__title"><a href="https://webchat.freenode.net/?channels=%23mir-server" class="p-link--soft">Community</a></h3>
-            </div>
-            <p>Get involved!</p>
-          </div>
+          <h3>Community</h3>
+          <p>Get involved!</p>
+          <a class="p-link--external" href="https://webchat.freenode.net/?channels=%23mir-server">#mir-server on Freenode</a>
         </div>
       </div>
     </section>
@@ -209,8 +193,6 @@
       </div>
     </footer>
   </main>
-
-
 </body>
 
 </html>
