Remove architecture diagram on small screens

--- a/index.html
+++ b/index.html
@@ -137,17 +137,17 @@
             the X windowing system.</p>
           <p>If you are building a device or creating a desktop experience for your users, Mir can give you a graphics stack
             that works across different platforms and driver models. It is secure and easy to integrate into shells.</p>
-          <p>Mir is currently available for developers to test as part of your kiosk, digital signage, or purpose built graphical
+          <p class="u-no-margin--bottom">Mir is currently available for developers to test as part of your kiosk, digital signage, or purpose built graphical
             solution. We welcome your feedback.</p>
         </div>
       </div>
     </section>
-    <section class="p-strip--light is-bordered u-no-padding--top">
+    <section class="p-strip--light u-no-padding--top u-hide--small">
       <div class="row u-align--center">
         <img src="https://assets.ubuntu.com/v1/1c5d16e4-Mir-diagram.svg" alt="" />
       </div>
     </section>
-    <section class="p-strip">
+    <section class="p-strip" style="border-top: 1px solid #cdcdcd;">
       <div class="row">
         <h2>Get started</h2>
       </div>
